--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-trending-crawler",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "transform github-trending repos to json data",
   "main": "index.js",
   "scripts": {
@@ -10,14 +10,19 @@
     "type": "git",
     "url": "git+ssh://git@github.com/zephyrpersonal/github-trending-crawler.git"
   },
-  "keywords": ["github", "spider", "crawler", "node", "koa"],
+  "keywords": [
+    "github",
+    "spider",
+    "crawler",
+    "node",
+    "koa"
+  ],
   "author": "zephyr",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zephyrpersonal/github-trending-crawler/issues"
   },
-  "homepage":
-    "https://github.com/zephyrpersonal/github-trending-crawler#readme",
+  "homepage": "https://github.com/zephyrpersonal/github-trending-crawler#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "node-fetch": "^1.7.3"
